syntax = "proto3";

package chat;

service ChatService {
  rpc GetChats(GetChatsRequest) returns (GetChatsResponse);
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
}

// Chat
message Chat {
  string id = 1;
  string fromUserId = 2;
  string toUserId = 3;
  string content = 4;
  string createdAt = 5;
}

// GetChats
message GetChatsRequest {
  string fromUserId = 1;
  string toUserId = 2;
  int32 page = 3;
  int32 limit = 4;
}

message GetChatsResponse {
  repeated Chat chats = 1;
}

// CreateChat
message CreateChatRequest {
  string fromUserId = 1;
  string toUserId = 2;
  string content = 3;
}

message CreateChatResponse {
  string id = 1;
  string fromUserId = 2;
  string toUserId = 3;
  string content = 4;
  string createdAt = 5;
}